feat(ui): add basic template

--- a/Dockerfile.basic
+++ b/Dockerfile.basic
@@ -13,6 +13,6 @@ RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix nocgo -o /app ./cmd/app/
 FROM consul:latest
 WORKDIR /root/
 COPY --from=builder /app ./
-COPY --from=builder /go/src/github.com/automium/reactor/tmpl/homepage.html tmpl/homepage.html
+COPY --from=builder /go/src/github.com/automium/reactor/tmpl/homepage_basic.html tmpl/homepage.html
 COPY --from=builder /go/src/github.com/automium/reactor/static static
-CMD consul agent -data-dir=/tmp/consul -node-meta image:example-latest -datacenter automium -join consul-consul-server.default.svc.cluster.local & sleep 10 && ./app
+CMD consul agent -data-dir=/tmp/consul -node-meta image:example-basic -datacenter automium -join consul-consul-server.default.svc.cluster.local & sleep 10 && ./app
