--- a/Dockerfile.acl
+++ b/Dockerfile.acl
@@ -19,6 +19,7 @@ COPY --from=builder /app ./
 COPY --from=builder /go/src/github.com/automium/reactor/tmpl/homepage.html tmpl/homepage.html
 COPY --from=builder /go/src/github.com/automium/reactor/static static
 
-ENV CONSUL_API consul-consul-server.default.svc.cluster.local
+ENV CONSUL consul-consul-server.default.svc.cluster.local
+ENV CONSUL_DATACENTER automium
 
-CMD consul agent -config-dir=/consul/config -config-dir=/consul/aclconfig -data-dir=/consul/data -node-meta image:example-acl -datacenter automium -join $CONSUL_API & sleep 10 && consul acl set-agent-token default $CONSUL_HTTP_TOKEN && ./app
+CMD consul agent -config-dir=/consul/config -config-dir=/consul/aclconfig -data-dir=/consul/data -node-meta image:example-acl -datacenter $CONSUL_DATACENTER -join $CONSUL & sleep 10 && consul acl set-agent-token default $CONSUL_HTTP_TOKEN && ./app
