--- a/Dockerfile.latest
+++ b/Dockerfile.latest
@@ -19,4 +19,7 @@ COPY --from=builder /go/src/github.com/automium/reactor/static static
 ENV CONSUL consul-consul-server.default.svc.cluster.local
 ENV CONSUL_DATACENTER automium
 
-CMD consul agent -data-dir=/tmp/consul -node-meta image:example-latest -datacenter $CONSUL_DATACENTER -join $CONSUL & sleep 10 && ./app
+CMD consul agent -data-dir=/tmp/consul \
+ -node-meta image:example-latest -node-meta flavor:default \
+ -datacenter $CONSUL_DATACENTER -join $CONSUL & sleep 10 \
+ && ./app
